--- a/dogs.html
+++ b/dogs.html
@@ -4,8 +4,78 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Dogs</title>
+    <link rel="stylesheet" href="dogs.css">
 </head>
 <body>
+    <header>
+        <nav class="navigation">
+            <a href="dogs.html" id="main-page">Main Page</a>
+            <a href="dog-photos.html" id="dog-photos">Dog Photoshoot</a>
+            <a href="breeds.html" id="dog-breeds">About the Breeds</a>
+            <a href="your-pet.html" id="user-pet">Your Pet</a>
+        </nav>
+    </header>
+
+    <main>
+
+        <h1 class="title">Meet My Dogs</h1>
+
+        <p class="main-ph">
+            Hello All! I would like to introduce you to the fluffiest, loving, slobberiest beasts
+            I have ever had the joy to know! These are my babies! As every parent of a pet knows,
+            animals hold a large section of our hearts and today I would like to help you understand
+            just how amazing and wonderful my sweet little ones are!
+        </p>
+
+        <div class="pax-intro">
+            <img src="unknown">
+            <h2>Meet Pax!</h2>
+            <p>
+                My sweet boy Paxy is almost six years old. I don't know what I would do without him.
+                He is always there to be my shoulder to cry on when I am upset and he is always the
+                first on my tail when something is going on, he has to be where the action is.  If we
+                sit on the couch and ignore him to long he will purposly sit with his back towards us
+                but as close as possible, as if to say "I'm hurt your not paying attention to me or
+                inviting me up" and will occationally turn his head in an, I don't care, type way, but with
+                those doleful pleeding eyes.  He loves to play fetch and hide-and-seek. If a visitor
+                comes over, you better watch out, all 100lb of pax will be jummping up on you for
+                kisses and love!
+            </p>
+        </div>
+
+        <div class="syl-intro">
+            <img src="unknown">
+            <h2>Meet Syl!</h2>
+            <p>
+                Syl, short for Sylphrenna, short for Sylly Goose is the cuddliest little fluff ball
+                you've ever seen.  For sure she would go with any stranger who is willing to give her
+                a hug.  This is Pax's girlfriend, she follows him everywhere and she loves to cuddle
+                with him.  We brought her home when she was 10 weeks old, she is now two and a half
+                years old.  She is a lazy brick house, if you sit on the floor she will lay right
+                ontop of you, her snout in your face for kisses.  Be careful not to leave the door
+                open while you sleep unless you want to wake up to 95lbs of fluff laying on your legs.
+            </p>
+        </div>
+
+        <div class="phen-intro">
+            <img src="unknown">
+            <h2>Meet Phen!</h2>
+            <p>
+                Phendoranna, or Phenny Penny as I call her is a nervouse and shy girl, but she has a
+                huge personality.  She loves guests, she will sneek up to someone new when they aren't
+                looking and bound away when the person looks at her. When she trusts you though you can
+                tell in her eyes, when she comes up on the couch she has to be on my lap and will lean
+                in untill she is rolling her face on mine.  She likes to lay on my chest and stare in my
+                eyes, I can almost tell she is saying "I trust you".  When Phen is excited she does the
+                cutest 180 turns, jummping in circles, 3-4 at a time.  She loves to play karate, throwing
+                her paws out and bounding. When she doesn't want to eat she will play hocky with he food
+                bowl, pushing it to me, I push it to her. back and forth.  Phen and Syl have the best
+                relationship being that they are litter mates. They will cuddle and roll ontop of each
+                other, even now that they are no longer puppies.
+            </p>
+        </div>
+    </main>
+
 
 </body>
 </html>
