added pics and finished html

--- a/breeds.html
+++ b/breeds.html
@@ -20,50 +20,81 @@
 
             <p class="main-ph">
                 Every dog breed has its own set of traits and mannerisms which are generally
-                but not always present in every you may meet.  Just like with humans, every
-                dog is an individual, whith their own personality.  However, we can use these
-                generalizations to get an idea of what we MIGHT deal with when choosing the
-                best pet to fit our families. Pax is a Husky English Lab mix while Syl and Phen
-                are a mix of Great Pyreneese and Anatolian Shepperd. Let me tell you a little
-                bit about what makes each of these breeds special!
+                but not always present in each dog.  Just like with humans, every
+                dog is an individual, whith their own personality.  Pax is a Husky-English Labrador
+                mix. He has to be mixed with something else as he is so large, but those are the Two
+                breeds we know he comes from.  Syl and Phen are Great Pyreneese-Anatolian Shepherd
+                mixes. I can see many of the traits which are expected for each breed in my dogs. But
+                ofcourse they come with their own special traits too.  Below we will be looking at
+                the general traits of each of these four breeds.  Please refer to the links below for
+                more information.
             </p>
         </div>
         <div class="section">
             <h4 class="min-title">About Huskys</h4>
             <p class="min-ph">
-                Talk about Husky traits.
+                Huskys are generaly very affectionate with their families as well as other dogs and
+                children. They are quick to make friends with strangers but have a tendancy to bark
+                or howl at potential threats, such as a bird or a squirrel.  They have a double coat
+                to keep them warm in the winter, but for an owner it means lots and lots of grooming
+                and vacuuming. Huskys have a lot of energy and love to play.  They have a moderate
+                trainability level, meaning they are independent, but if you are consistent they will
+                be easily trained. They are born pack animals and get along well with other animals.
+            </p>
+            <h4 class="mini-title">Pax compared to general Husky traits</h4>
+            <p class="mini-ph">
+                Pax is such a sweet loving boy who makes friends with everyone he meets.  He can be very high
+                energy but he understands how to be gentle when the time calls for it, when interacting with
+                puppies or children.  He does shed ALL THE TIME, but the zoomies, cuddles, and
+                hide-and-seek make the cleaning worth it.  He loves to bark at animals outside as well as
+                bark and growl while playing.  It is very true that he is a pack animal.  We ended up
+                adopting the girls specificly for Pax, you could tell he was lonely and he wanted a friend.
+                He fell inlove with the girls right away and would constantly try to share his toys with
+                them.  Though it took him time to get used to sharing his bed.
             </p>
         </div>
 
         <div class="section">
             <h4 class="min-title">About English Labradors</h4>
             <p class="min-ph">
-                Talk about English Labrador traits.
+                English labradors are very affectionate and playful. They are generally a very good family
+                pet, being that they are good with children and strangers alike. They can be very easily
+                trained as they are eager to please and do well with mental stimulation.  They do shed a
+                lot however as they have a second coat.
             </p>
         </div>
 
         <div class="section">
-            <h4 class="min-title">About Great Pyreneese</h4>
+            <h4 class="min-title">About Great Pyrenees</h4>
             <p class="min-ph">
-                Talk about Great Pyreneese traits.
+                Great Pyrenees dogs are considered to be very affectionate and cuddly with their family.
+                When you adopt one it means that they are part of the family. They are decent with other
+                dogs and young children.  They do need to be groomed fairly frequently.  They can be
+                mildly reserved with strangers, but if their owner says they are fine it should all be good.
+                They are made to be a watch dog and work on farms so these dogs will bark at most things.
+                They are relativly playful and do need exercise and stimulation.
             </p>
         </div>
 
         <div class="section">
-            <h4 class="min-title">About Anatolian Sheeperds</h4>
+            <h4 class="min-title">About Anatolian Shepherds</h4>
             <p class="min-ph">
-                Talk about Anatolian Sheeperd traits.
+                Anatolian Shepherds are very independent dogs which can make them more difficult to train, but
+                they will be more willing to listen to you if you provide them with activity, mentelstimulation,
+                and respect. They are generally good with other dogs and children Anatolian Shepherds shed
+                a decent amount but they do not generally drool. They are generally self-willed and not as focused
+                on pleasing their owner.
             </p>
         </div>
 
         <div class="more-info">
             <h4 class="min-title">Learn More</h4>
             <ul>
-                <li>Link on Husky's</li>
-                <li>Link on English Lab's</li>
-                <li>Link on Great Pry's</li>
-                <li>Link on Anatolian Sheeperd's</li>
-                <li>Link on All Dog Breeds</li>
+                <li><a href="https://www.akc.org/dog-breeds/siberian-husky/" target="_blank">More information on Huskys</a></li>
+                <li><a href="https://www.thesprucepets.com/english-labrador-breed-profile-5195545" target="_blank">More information on English Labradors</a></li>
+                <li><a href="https://www.akc.org/dog-breeds/great-pyrenees/" target="_blank">More information on Great Pyrenees</a></li>
+                <li><a href="https://www.akc.org/dog-breeds/anatolian-shepherd-dog/" target="_blank">More information on Anatolian Shepherds</a></li>
+                <li><a href="https://www.akc.org/dog-breeds/" target="_blank">Look up different types of dog breeds</a></li>
             </ul>
         </div>
     </main>
