--- a/dog-photos.html
+++ b/dog-photos.html
@@ -21,33 +21,33 @@
 
         <div class="pics-labels">
             <div>
-                <img src="unknown" id="pic-1">
-                <label for="pic-1">Unknown</label>
+                <img src=".\Photos\snuggles-1.jpg" alt="Three dogs cuddling" id="pic-1">
+                <label for="pic-1">Here is the three of them snuggling</label>
             </div>
 
             <div>
-                <img src="unknown" id="pic-2">
-                <label for="pic-2">Unknown</label>
+                <img src=".\Photos\one-dog.jpg" alt="Two dogs" id="pic-2">
+                <label for="pic-2">Phen and Syl love each other so much</label>
             </div>
 
             <div>
-                <img src="unknown" id="pic-3">
-                <label for="pic-3">Unknown</label>
+                <img src=".\Photos\syl-2.jpg" alt="Picture of Syl" id="pic-3">
+                <label for="pic-3">I can never stop Syl from laying out in the grass</label>
             </div>
 
             <div>
-                <img src="unknown" id="pic-4">
-                <label for="pic-4">Unknown</label>
+                <img src=".\Photos\pax-2.jpg" alt="Picture of Pax" id="pic-4">
+                <label for="pic-4">Pax has the silliest upsidown face</label>
             </div>
 
             <div>
-                <img src="unknown" id="pic-5">
-                <label for="pic-5">Unknown</label>
+                <img src=".\Photos\snuggles-2.jpg" alt="Three dogs cuddling" id="pic-5">
+                <label for="pic-5">All together on their big bed!</label>
             </div>
 
             <div>
-                <img src="unknown" id="pic-6">
-                <label for="pic-6">Unknown</label>
+                <img src=".\Photos\snuggles-3.jpg" alt="Three dogs cuddling" id="pic-6">
+                <label for="pic-6">It is amazing to see just how much they all love each other</label>
             </div>
         </div>
     </main>
