--- a/dogs.html
+++ b/dogs.html
@@ -28,7 +28,7 @@
         </p>
 
         <div class="pax-intro">
-            <img src="unknown">
+            <img src=".\Photos\pax-1.jpg" alt="Picture of Pax" id="pax-1">
             <h2>Meet Pax!</h2>
             <p>
                 My sweet boy Paxy is almost six years old. I don't know what I would do without him.
@@ -44,7 +44,7 @@
         </div>
 
         <div class="syl-intro">
-            <img src="unknown">
+            <img src=".\Photos\syl-1.jpg" alt="Picture of Syl" id="syl-1">
             <h2>Meet Syl!</h2>
             <p>
                 Syl, short for Sylphrenna, short for Sylly Goose is the cuddliest little fluff ball
@@ -58,7 +58,7 @@
         </div>
 
         <div class="phen-intro">
-            <img src="unknown">
+            <img src=".\Photos\phen-1.jpg" alt="Picture of Phen" id="phen-1">
             <h2>Meet Phen!</h2>
             <p>
                 Phendoranna, or Phenny Penny as I call her is a nervouse and shy girl, but she has a
