Majority of CSS is done

--- a/dog-photos.html
+++ b/dog-photos.html
@@ -8,46 +8,51 @@
 </head>
 <body>
     <header>
-        <nav class="navigation">
-            <a href="dogs.html" id="main-page">Main Page</a>
-            <a href="dog-photos.html" id="dog-photos">Dog Photoshoot</a>
-            <a href="breeds.html" id="dog-breeds">About the Breeds</a>
-            <a href="your-pet.html" id="user-pet">Your Pet</a>
+        <nav>
+            <a href="dogs.html" id="main-page"><strong>Main Page</strong></a>
+            <a href="dog-photos.html" id="dog-photos"><strong>Dog Photoshoot</strong></a>
+            <a href="breeds.html" id="dog-breeds"><strong>About the Breeds</strong></a>
+            <a href="your-pet.html" id="user-pet"><strong>Your Pet</strong></a>
         </nav>
     </header>
 
     <main>
-        <h1 class="title">The beautiful Floofs in All Their Glory!</h1>
+        <div class="intro">
+            <h1 class="title">The beautiful Floofs in All Their Glory!</h1>
+            <p class="main-ph">
+                It is time for more pictures! Here are my babies being their lovely cuddly selves!
+            </p>
+        </div>
 
-        <div class="pics-labels">
-            <div>
-                <img src=".\Photos\snuggles-1.jpg" alt="Three dogs cuddling" id="pic-1">
-                <label for="pic-1">Here is the three of them snuggling</label>
+        <div class="pictures">
+            <div class="pic-box">
+                <label for="pic-1" class="pl">Here is the three of them snuggling</label>
+                <img src=".\Photos\snuggles-1.jpg" alt="Three dogs cuddling" class="pic" id="pic-1">
             </div>
 
-            <div>
-                <img src=".\Photos\one-dog.jpg" alt="Two dogs" id="pic-2">
-                <label for="pic-2">Phen and Syl love each other so much</label>
+            <div class="pic-box">
+                <label for="pic-2" class="pl">Phen and Syl love each other so much</label>
+                <img src=".\Photos\one-dog.jpg" alt="Two dogs" class="pic" id="pic-2">
             </div>
 
-            <div>
-                <img src=".\Photos\syl-2.jpg" alt="Picture of Syl" id="pic-3">
-                <label for="pic-3">I can never stop Syl from laying out in the grass</label>
+            <div class="pic-box">
+                <label for="pic-3" class="pl">You can't stop Syl from laying in the grass</label>
+                <img src=".\Photos\syl-2.jpg" alt="Picture of Syl" class="pic" id="pic-3">
             </div>
 
-            <div>
-                <img src=".\Photos\pax-2.jpg" alt="Picture of Pax" id="pic-4">
-                <label for="pic-4">Pax has the silliest upsidown face</label>
+            <div class="pic-box">
+                <label for="pic-4" class="pl">Pax has the silliest upsidown face</label>
+                <img src=".\Photos\pax-2.jpg" alt="Picture of Pax" class="pic" id="pic-4">
             </div>
 
-            <div>
-                <img src=".\Photos\snuggles-2.jpg" alt="Three dogs cuddling" id="pic-5">
-                <label for="pic-5">All together on their big bed!</label>
+            <div class="pic-box">
+                <label for="pic-5" class="pl">All together on their big bed!</label>
+                <img src=".\Photos\snuggles-2.jpg" alt="Three dogs cuddling" class="pic" id="pic-5">
             </div>
 
-            <div>
-                <img src=".\Photos\snuggles-3.jpg" alt="Three dogs cuddling" id="pic-6">
-                <label for="pic-6">It is amazing to see just how much they all love each other</label>
+            <div class="pic-box">
+                <label for="pic-6" class="pl">It is amazing to see just how much they all love each other</label>
+                <img src=".\Photos\snuggles-3.jpg" alt="Three dogs cuddling" class="pic" id="pic-6">
             </div>
         </div>
     </main>
