--- a/breeds.html
+++ b/breeds.html
@@ -6,16 +6,16 @@
 </head>
 <body>
     <header>
-        <nav class="navigation">
-            <a href="dogs.html" id="main-page">Main Page</a>
-            <a href="dog-photos.html" id="dog-photos">Dog Photoshoot</a>
-            <a href="breeds.html" id="dog-breeds">About the Breeds</a>
-            <a href="your-pet.html" id="user-pet">Your Pet</a>
+        <nav>
+            <a href="dogs.html" id="main-page"><strong>Main Page</strong></a>
+            <a href="dog-photos.html" id="dog-photos"><strong>Dog Photoshoot</strong></a>
+            <a href="breeds.html" id="dog-breeds"><strong>About the Breeds</strong></a>
+            <a href="your-pet.html" id="user-pet"><strong>Your Pet</strong></a>
         </nav>
     </header>
 
     <main>
-        <div class="main">
+        <div class="intro">
             <h1 class="title">About Their Breeds</h1>
 
             <p class="main-ph">
@@ -40,17 +40,6 @@
                 and vacuuming. Huskys have a lot of energy and love to play.  They have a moderate
                 trainability level, meaning they are independent, but if you are consistent they will
                 be easily trained. They are born pack animals and get along well with other animals.
-            </p>
-            <h4 class="mini-title">Pax compared to general Husky traits</h4>
-            <p class="mini-ph">
-                Pax is such a sweet loving boy who makes friends with everyone he meets.  He can be very high
-                energy but he understands how to be gentle when the time calls for it, when interacting with
-                puppies or children.  He does shed ALL THE TIME, but the zoomies, cuddles, and
-                hide-and-seek make the cleaning worth it.  He loves to bark at animals outside as well as
-                bark and growl while playing.  It is very true that he is a pack animal.  We ended up
-                adopting the girls specificly for Pax, you could tell he was lonely and he wanted a friend.
-                He fell inlove with the girls right away and would constantly try to share his toys with
-                them.  Though it took him time to get used to sharing his bed.
             </p>
         </div>
 
@@ -89,7 +78,7 @@
 
         <div class="more-info">
             <h4 class="min-title">Learn More</h4>
-            <ul>
+            <ul class="mi">
                 <li><a href="https://www.akc.org/dog-breeds/siberian-husky/" target="_blank">More information on Huskys</a></li>
                 <li><a href="https://www.thesprucepets.com/english-labrador-breed-profile-5195545" target="_blank">More information on English Labradors</a></li>
                 <li><a href="https://www.akc.org/dog-breeds/great-pyrenees/" target="_blank">More information on Great Pyrenees</a></li>
